@@ -14,6 +14,10 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+17 October 2014 A.Dotti (hadr-cross-V10-00-15)
+- Fixing data-races in G4Chips{Neutron,Proton}ElasticXS as
+  retported by DRD
+
 09 September 2014 W.Pokorski (hadr-cross-V10-00-14)
 ------------------------------------------------
 - adding missing factories to G4NeutronCaptureXS, G4NeutronElasticXS, 
